Closed
Bug 1964924
Opened 10 days ago
Closed 9 days ago
[Linux] HW encoding crashes when surface copy is used
Categories
(Core :: Audio/Video: Playback, defect, P3)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
140 Branch
Tracking | Status | |
---|---|---|
firefox-esr128 | --- | unaffected |
firefox138 | --- | unaffected |
firefox139 | --- | unaffected |
firefox140 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
(Regression)
Details
(Keywords: regression)
Crash Data
Attachments
(1 file)
It's due to missing modifiers for YUV planes.
Flags: needinfo?(stransky)
Assignee | ||
Comment 1•10 days ago
|
||
#0 nsTArray_base<nsTArrayInfallibleAllocator, nsTArray_RelocateUsingMemutils>::Length (this=0x10) at /raid/src/objdir-opt/dist/include/nsTArray.h:439
#1 nsTArray_base<nsTArrayInfallibleAllocator, nsTArray_RelocateUsingMemutils>::IsEmpty (this=0x10) at /raid/src/objdir-opt/dist/include/nsTArray.h:442
#2 mozilla::widget::DRMFormat::UseModifiers (this=0x0) at /raid/src/objdir-opt/dist/include/mozilla/widget/DMABufFormats.h:53
#3 DMABufSurfaceYUV::CreateYUVPlaneGBM (this=0x7f2e246f2c60, aPlane=0, aFormat=0x0) at /raid/src/widget/gtk/DMABufSurface.cpp:1547
#4 0x00007f2e1bfd576d in DMABufSurfaceYUV::CreateYUVPlane (this=0x7f2e14673cc4, this@entry=0x7f2e246f2c60, aGLContext=aGLContext@entry=0x7f2df973b800, aPlane=129,
aPlane@entry=0, aFormat=0x2f418e10d1010100, aFormat@entry=0x0) at /raid/src/widget/gtk/DMABufSurface.cpp:1689
#5 0x00007f2e1bfd58c6 in DMABufSurfaceYUV::CopyYUVDataImpl (this=0x7f2e246f2c60, aDesc=<optimized out>, aWidth=<optimized out>, aHeight=<optimized out>)
at /raid/src/widget/gtk/DMABufSurface.cpp:1715
#6 0x00007f2e1bfd3961 in DMABufSurfaceYUV::UpdateYUVData (this=<optimized out>, aDesc=<optimized out>, aWidth=<optimized out>, aHeight=<optimized out>, aCopy=<optimized out>)
at /raid/src/widget/gtk/DMABufSurface.cpp:1729
#7 0x00007f2e1b2a5d41 in mozilla::VideoFramePool<46465650>::GetVideoFrameSurface
(this=0x7f2e00a44e00, aVaDesc=..., aWidth=2048, aHeight=858, aAVCodecContext=0x7f2e2461a400, aAVFrame=0x7f2dfc6e43c0, aLib=0x7f2e1f82b570 <mozilla::sLibAV>)
at /raid/src/dom/media/platforms/ffmpeg/FFmpegVideoFramePool.cpp:305
#8 0x00007f2e1b32659a in mozilla::FFmpegVideoDecoder<61>::CreateImageVAAPI
(this=this@entry=0x7f2e146b3d00, aOffset=106715, aPts=0, aDuration=41700, aResults=mozilla::MediaDataDecoder::DecodedData &)
at /raid/src/dom/media/platforms/ffmpeg/FFmpegVideoDecoder.cpp:1672
#9 0x00007f2e1b3255d0 in mozilla::FFmpegVideoDecoder<61>::DoDecode
(this=0x7f2e146b3d00, aSample=<optimized out>, aData=<optimized out>, aSize=<optimized out>, aGotFrame=0x7f2e00ba86e7, aResults=mozilla::MediaDataDecoder::DecodedData &)
at /raid/src/dom/media/platforms/ffmpeg/FFmpegVideoDecoder.cpp:1211
Assignee | ||
Comment 2•10 days ago
|
||
Updated•10 days ago
|
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Assignee | ||
Updated•10 days ago
|
Flags: needinfo?(stransky)
Assignee | ||
Updated•10 days ago
|
Keywords: regression
Regressed by: 1959509
Comment 4•10 days ago
|
||
Copying crash signatures from duplicate bugs.
Crash Signature: [@ mozilla::widget::DRMFormat::UseModifiers]
Comment 5•10 days ago
|
||
Set release status flags based on info from the regressing bug 1959509
status-firefox138:
--- → unaffected
status-firefox139:
--- → unaffected
status-firefox140:
--- → affected
status-firefox-esr128:
--- → unaffected
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/a04ffaf75943
[Linux] In case of missing DRMFormat create DMABufSurfaceGBM with stored modifiers r=emilio
Comment 7•9 days ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 9 days ago
Resolution: --- → FIXED
Target Milestone: --- → 140 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•