Bug 1964924 [Linux] In case of missing DRMFormat create DMABufSurfaceGBM with stored modifiers r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D248191